fix(Header): z-index style

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -7,7 +7,7 @@
 	top: 0;
 	background: var(--header);
 	backdrop-filter: blur(12px);
-	z-index: 10;
+	z-index: 100;
 	height: 60px;
 }
 
